--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -10,20 +10,20 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        deno-version: [1.26.0, "v1.x"]
-
     steps:
-      - name: Git Checkout Deno Module
-        uses: actions/checkout@v2
-      - name: Use Deno Version ${{ matrix.deno-version }}
-        uses: denolib/setup-deno@v2
+      - name: Setup repo
+        uses: actions/checkout@v4
+
+      - name: Setup Deno
+        uses: denoland/setup-deno@v1
         with:
-          deno-version: ${{ matrix.deno-version }}
-      - name: Test Deno Formatting
-        run: deno fmt --check test/deno
-      - name: Test Deno Linting
-        run: deno lint test/deno
-      - name: Test Deno Module
-        run: deno task test
+          deno-version: v1.x
+      
+      - name: Verify formatting
+        run: deno fmt --check
+
+      - name: Run linter
+        run: deno lint
+
+      - name: Check types
+        run: deno check webdiff.ts
