--- a/deno.json
+++ b/deno.json
@@ -5,5 +5,14 @@
   "fmt": {
     "lineWidth": 200
   },
-  "imports": { "@cross/test": "jsr:@cross/test@^0.0.6", "@std/assert": "jsr:@std/assert@^0.219.1" }
+  "tasks": {
+    "check": "deno fmt --check && deno lint && deno check mod.ts && deno task test && deno task check-deps --slim",
+    "check-deps": "deno run -A jsr:@check/deps --ignore-unused",
+    "test": "deno test",
+    "publish-dry": "deno publish --dry-run"
+  },
+  "publish": {
+    "exclude": [".github", "*.test.ts"]
+  },
+  "imports": { "@cross/test": "jsr:@cross/test@^0.0.9", "@std/assert": "jsr:@std/assert@^0.220.1" }
 }
